Improved readme and added remarks in files Update .gitignore, test01.json, and readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ resources/HalfMoon/
 resources/Icons8/
 resources/Quantum/
 
-# Other folders
+# Other folders  (Will be removed once the content system is finished !)
 content/page/
 files/
