Improved PHP code, Included Quantum font, Temporarily fixed htaccess

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,7 @@ resources/ChartJs/
 resources/FontAwesomePro/
 resources/GoogleFonts/
 resources/HalfMoon/
-resources/Icons8/
-resources/Quantum/
 
 # Other folders  (Will be removed once the content system is finished !)
 content/page/
-files/
+/files/
