Added images, Moved lscom images, Added strings for content Update .gitignore, strings.json, and 21 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ resources/FontAwesomePro/
 *.exe
 *.url
 
-# Other folders  (Will be removed once the content system is finished !)
-# /files/*/
-files/
+# Others
+*.pdn
