--- a/.htaccess
+++ b/.htaccess
@@ -21,7 +21,7 @@ ErrorDocument 404 /404.php
 # Setting some headers for security.
 Header always set X-Detected-Country "NK"
 Header always set X-Frame-Options "deny"
-Header always set Content-Security-Policy "default-src 'self'; object-src 'none'; child-src 'self'; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content"
+Header always set Content-Security-Policy "default-src 'self' files.nibblepoker.lu; object-src 'none'; child-src 'self'; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content"
 Header always set X-XSS-Protection " 1; mode=block"
 Header always set Referrer-Policy "no-referrer"
 Header always set X-Content-Type-Options "nosniff"
