Improved slightly error pages, Added card's corner triangular button Update .gitignore, 403.php, and 7 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ resources/FontAwesomePro/
 tmp/
 resources/Azias/css/*.css
 resources/Azias/css/*.map
+resources/Azias/sass/**.css
+resources/Azias/sass/**.map
+
