--- a/tools/.htaccess
+++ b/tools/.htaccess
@@ -1,3 +1,9 @@
 # Redirecting any URL that starts with "/tools" to the root of this folder.
 RewriteEngine On
-RewriteRule ^(.*) index.php [NC]
+RewriteRule ^\/?(tools\/)?[a-zA-Z0-9\-]+\/?$ index.php [NC]
+
+# Redirecting any URL that starts with "/content" to the root of this folder.
+#RewriteEngine On
+#RewriteRule ^\/tools\/[a-zA-Z0-9\-]+\/?$ index.php [L]
+
+# ^(?!\/.*\.(js|css)).*$ Should have worked :/
