--- a/.htaccess
+++ b/.htaccess
@@ -11,11 +11,16 @@
 
 # Fixing some encoding issues on non-HTML files.
 # Mostly affects the old privacy policies written in french.
-AddCharset utf-8 .css .txt .js .md
+AddCharset utf-8 .css .txt .js .md .ts .mjs
 #<Files ~ "\.txt?$">
 #    Header set Content-Type "text/plain; charset=utf-8"
 #</Files>
 #AddDefaultCharset utf-8
+
+# Adding MIME types
+AddType text/typescript .ts
+AddType text/javascript .js
+AddType text/javascript .mjs
 
 # Correcting some default options for security and language/content redirection.
 # FollowSymlinks is also on since it's required for "mod_rewrite" and the server is jailed.
@@ -47,18 +52,31 @@ ErrorDocument 404 /error.php
 #Header set Pragma "no-cache"
 #Header set Expires 0
 
+# Setting up GZIP
+<ifModule mod_gzip.c>
+    mod_gzip_on Yes
+    mod_gzip_dechunk Yes
+    mod_gzip_item_include file \.(html?|txt|css|js|php|pl)$
+    mod_gzip_item_include handler ^cgi-script$
+    mod_gzip_item_include mime ^text/.*
+    mod_gzip_item_include mime ^application/x-javascript.*
+    mod_gzip_item_exclude mime ^image/.*
+    mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</ifModule>
+
 # # # Setting some headers for security.
 # # #Header always set X-Detected-Country "NK"
-# # Header always set X-Frame-Options "deny"
+Header always set X-Frame-Options "deny"
 # # Header always set Content-Security-Policy "default-src 'self' files.nibblepoker.lu; img-src 'self' files.nibblepoker.lu data:; object-src 'none'; child-src 'self'; frame-ancestors 'none'; upgrade-insecure-requests; block-all-mixed-content"
-# # Header always set X-XSS-Protection " 1; mode=block"
-# # Header always set Referrer-Policy "no-referrer"
-# # Header always set X-Content-Type-Options "nosniff"
-# # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-# # #Header always set Cache-Control "max-age=300, public"
-# # Header always set Access-Control-Allow-Origin "*"
-# # Header unset X-Powered-By
-# # #Header always set X-Powered-By "Amiga 1200, Kickstart 3.1"
+Header always set X-XSS-Protection " 1; mode=block"
+Header always set Referrer-Policy "no-referrer"
+Header always set X-Content-Type-Options "nosniff"
+Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+#Header always set Cache-Control "max-age=300, public"
+Header always set Access-Control-Allow-Origin "*"
+Header unset X-Powered-By
+#Header always set X-Powered-By "Amiga 1200, Kickstart 3.1"
+Header always set Permissions-Policy "browsing-topics=(), interest-cohort=()"
 
 # Handling all other redirections.
 RewriteEngine On
