--- a/.htaccess
+++ b/.htaccess
@@ -27,6 +27,9 @@ AddType text/javascript .mjs
 Options -Indexes +FollowSymlinks -ExecCGI
 ServerSignature Off
 
+# Helping out with minified pages and/or pre-rendered ones first if available
+DirectoryIndex index.min.html index.min.php index.html index.php
+
 # Custom error pages.
 ErrorDocument 403 /error.php
 ErrorDocument 404 /error.php
@@ -43,7 +46,7 @@ ErrorDocument 404 /error.php
     # Static files: 1 Week
     Header set Cache-Control "max-age=604800, public, must-revalidate"
 </FilesMatch>
-##<FilesMatch "\.(?i:css|js)$">
+##<FilesMatch "\.(?i:css|js|mjs)$">
 ##    # Semi-static files: 1 Day
 ##    Header set Cache-Control "max-age=86400, public, must-revalidate"
 ##</FilesMatch>
@@ -56,7 +59,7 @@ ErrorDocument 404 /error.php
 <ifModule mod_gzip.c>
     mod_gzip_on Yes
     mod_gzip_dechunk Yes
-    mod_gzip_item_include file \.(html?|txt|css|js|php|pl)$
+    mod_gzip_item_include file \.(html?|txt|css|js|mjs|php|pl)$
     mod_gzip_item_include handler ^cgi-script$
     mod_gzip_item_include mime ^text/.*
     mod_gzip_item_include mime ^application/x-javascript.*
