--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
     "minify": "^10.2.0",
-    "rollup": "^3.26.2",
+    "rollup": "^3.27.2",
     "sass": "^1.63.6",
     "terser": "^5.19.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "html-minifier-terser":  "^7.2.0"
   }
 }
