Updated a couple pages, Finished new basic style, Removed tools from menu, Updated formula wizard, Other minor changes Update .gitignore, .htaccess, and 32 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ tools/items/formula-wizard/src/*.js
 # Temporary
 tmp/
 commons/trash/
-scrollbar.scss
 commons/strings/_*/
 _unsorted/
 tools/items/*/*.min.js
+wasm-test/
