--- a/content/.htaccess
+++ b/content/.htaccess
@@ -1,3 +1,6 @@
+# Serving minified pages and/or pre-rendered ones first if available.
+DirectoryIndex index.min.html index.min.php index.php index.html
+
 # Redirecting any URL that starts with "/content" to the root of this folder.
 RewriteEngine On
 RewriteRule ^(.*) index.php [NC]
