Removed static content index, Added independant base files for content system's index Update compile-content.cmd, compile.bat, and 11 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ resources/PlotlyJs/
 *.min.php
 *.min.js
 commons/strings.json
+content/index.json
 resources/NibblePoker/css/*.css
 tools/items/formula-wizard/*.js
 tools/items/formula-wizard/src/*.js
