--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,12 @@ package-lock.json
 # Static resources
 resources/DecimalJs/
 resources/DecimalJsLight/
+resources/ExtGraphics/
 resources/FontAwesomePro/
 resources/PlotlyJs/
+
+# Article drafts
+articles/drafts/
 
 # Compiled Stuff
 *.min.php
