--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # Node.JS
 node_modules/
 package-lock.json
+scripts/node_modules/
+scripts/package-lock.json
 
 # Static resources
 resources/DecimalJs/
