Added CircuitPython Custom FS stub, Fixed l10n bug in listings, Minor additions Update circuitpython-custom-fs.yml, sidebar.yml, and 13 more files...

--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -27,6 +27,11 @@
   icon: fad fa-microchip
   active_id: electronic
 
+- title_key: text.experiments
+  abs_href: "/content/?tags=experiments"
+  icon: fad fa-flask-vial
+  active_id: electronic
+
 - title_key: text.tools
   abs_href: "/tools"
   icon: fad fa-toolbox
