--- a/data/strings/fr/sidebar.yml
+++ b/data/strings/fr/sidebar.yml
@@ -10,6 +10,7 @@ text.projects: Projets
 text.applications: Applications
 text.libraries: Librairies
 text.electronics: Électronique
+text.experiments: Expériences
 text.3d-print: Impression 3D
 text.tools: Outils
 text.links: Liens
