Added "new" indicator to sidebar Update sidebar.yml, commons.yml, and 4 more files...

--- a/data/strings/fr/sidebar.yml
+++ b/data/strings/fr/sidebar.yml
@@ -12,7 +12,7 @@ text.libraries: Librairies
 text.electronics: Électronique
 text.experiments: Expériences
 text.3d-print: Impression 3D
-text.tools: Outils
+text.tools: Utilitaires
 text.links: Liens
 text.downloads: Téléchargements
 text.gitea: Dépôts Git
