--- a/data/tools/.svg-to-png.yml
+++ b/data/tools/.svg-to-png.yml
@@ -25,6 +25,8 @@ metadata:
     subtitle_key: "article.subtitle"
     tags:
       - "undefined"
-data:
+resources:
   scripts:
-    - "epr_main.js"
+    - "svg-to-png.mjs"
+  stylesheets:
+    - "svg-to-png.css"
