--- a/data/projects/.circuitpython-custom-fs.yml
+++ b/data/projects/.circuitpython-custom-fs.yml
@@ -1,7 +1,6 @@
 
-tools:
-  - id: "uuid-generator"
-    applet_id: "uuid-generator"
+projects:
+  - id: "circuitpython-custom-fs"
     metadata:
       head:
         title_key: "meta.title"
@@ -11,21 +10,26 @@ tools:
         description_key: "meta.description"
         type: null
         url: null
-        image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
+        image_url: "/resources/NibblePoker/images/content/circuitpython-ebyte-e32/main.png"
         image_type: null
       twitter:
         title_key: "meta.title"
         description_key: "meta.description"
       index:
-        priority: 100
+        priority: 105
         enable: true
         title_key: "meta.title"
         preamble_key: "meta.description"
-        image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
+        image_url: "/resources/NibblePoker/images/content/circuitpython-ebyte-e32/main.png"
         image_alt_key: ""
       general:
         icon: "fab fa-python"
         title_key: "meta.title"
         subtitle_key: "article.subtitle"
         tags:
-          - "undefined"
+          - "experiments"
+          - "electronic"
+          - "python"
+          - "circuitpython"
+        languages:
+          - "python"
