--- a/data/tools/.excel-password-remover.yml
+++ b/data/tools/.excel-password-remover.yml
@@ -25,8 +25,6 @@ metadata:
     subtitle_key: "article.subtitle"
     tags:
       - "undefined"
-data:
+resources:
   scripts:
-    - "svg-to-png.mjs"
-  stylesheets:
-    - "svg-to-png.css"
+    - "epr_main.js"
