Added more content, Minor incremental improvements Update app.py, uuid-generator.yml, and 23 more files...

--- a/data/applets/uuid-generator.yml
+++ b/data/applets/uuid-generator.yml
@@ -1,8 +1,8 @@
 
 applets:
-  - id: "uuid-generator"
+  - id: "web-usb-test"
     resources:
       scripts:
-        - "uuid-generator.mjs"
+        - "web-usb-test.mjs"
       stylesheets:
-        - "uuid-generator.css"
+        - "web-usb-test.css"
