--- a/data/strings/en/excel-password-remover.yml
+++ b/data/strings/en/excel-password-remover.yml
@@ -35,3 +35,12 @@ usage.p1: >-
 demo.title: Demonstration video
 links.title: Links
 content.link.demo: Demo hosted on GitHub
+
+
+eula.1: "This tool is for use only with files you have permission to unlock.<br>
+If you don’t have authorization, contact the appropriate authority.<br>
+You are responsible for how you use this tool."
+eula.2: "No data is sent online, as everything happens in your browser with JavaScript.<br>
+However, do not use this tool for sensitive files unless you have permission from the relevant authorities to avoid legal issues."
+eula.3: "The tool doesn't reveal the original password, as it’s secure and not stored in plain text; it simply removes it."
+eula.4: "By using this tool, you accept full responsibility, and it is provided “as is”, without any warranty."
