Implemented conditionally included applet resource for standalone mode Update excel-password-remover.yml, png-chunk-analyser.yml, and 6 more files...

--- a/data/applets/excel-password-remover.yml
+++ b/data/applets/excel-password-remover.yml
@@ -1,8 +1,9 @@
-
 applets:
   - id: "excel-password-remover"
     resources:
       scripts:
-        - "excel-password-remover.mjs"
+        - "https://cdn.nibblepoker.lu/JSZip/v3.10.1/jszip.min.js"
+        - "standalone://jszip.min.js"
+        - "applet://excel-password-remover.mjs"
       stylesheets:
-        - "excel-password-remover.css"
+        - "applet://excel-password-remover.css"
