--- a/data/applets/uuid-generator.yml
+++ b/data/applets/uuid-generator.yml
@@ -1,8 +1,7 @@
-
 applets:
   - id: "web-usb-test"
     resources:
       scripts:
-        - "web-usb-test.mjs"
+        - "applet://web-usb-test.mjs"
       stylesheets:
-        - "web-usb-test.css"
+        - "applet://web-usb-test.css"
