--- a/data/applets/png-chunk-analyser.yml
+++ b/data/applets/png-chunk-analyser.yml
@@ -1,8 +1,7 @@
-
 applets:
   - id: "png-chunk-analyser"
     resources:
       scripts:
-        - "png-chunk-analyser.mjs"
+        - "applet://png-chunk-analyser.mjs"
       stylesheets:
-        - "png-chunk-analyser.css"
+        - "applet://png-chunk-analyser.css"
