--- a/data/strings/en/excel-password-remover.yml
+++ b/data/strings/en/excel-password-remover.yml
@@ -37,10 +37,10 @@ links.title: Links
 content.link.demo: Demo hosted on GitHub
 
 
-eula.1: "This tool is for use only with files you have permission to unlock.<br>
-If you don’t have authorization, contact the appropriate authority.<br>
-You are responsible for how you use this tool."
-eula.2: "No data is sent online, as everything happens in your browser with JavaScript.<br>
-However, do not use this tool for sensitive files unless you have permission from the relevant authorities to avoid legal issues."
-eula.3: "The tool doesn't reveal the original password, as it’s secure and not stored in plain text; it simply removes it."
-eula.4: "By using this tool, you accept full responsibility, and it is provided “as is”, without any warranty."
+eula.1: "This tool should only be used with files you have the express permission to unlock."
+eula.2: "All password removal is done locally in your browser, and <span class='t-bold'>no data is sent online</span>.<br>
+The original password cannot be revealed as it’s secure by design and not stored in plain text; it simply gets removed."
+eula.3: "By using this tool, you accept full responsibility, and that it is provided “as is” without any warranty."
+
+file.selection.title: "File Selection"
+file.selection.1: "Drop your excel file(s) here or click on the buttons."
