--- a/data/tools/excel-password-remover.yml
+++ b/data/tools/excel-password-remover.yml
@@ -24,7 +24,7 @@ tools:
         image_url: "/resources/NibblePoker/images/tools/excel-password-remover/excel-password-remover.png"
         image_alt_key: ""
       general:
-        icon: "fab fa-python"
+        icon: "fad fa-table-cells-column-unlock"
         title_key: "meta.title"
         subtitle_key: "article.subtitle"
         tags:
