--- a/data/strings/fr/excel-password-remover.yml
+++ b/data/strings/fr/excel-password-remover.yml
@@ -31,3 +31,11 @@ usage.p1: >-
 demo.title: Vidéo de démonstration
 links.title: Liens
 content.link.demo: Démo hébergée sur GitHub
+
+eula.1 : "Cet outil ne doit être utilisé qu'avec des fichiers pour lesquels vous avez l'autorisation de les déverrouiller."
+eula.2 : "Toute suppression de mot de passe se fait localement dans votre navigateur, et <span class='t-bold'>aucune donnée n'est envoyée via Internet</span>.<br>
+Le mot de passe original ne peut pas être révélé car il est sécurisé par Excel et n'est pas stocké en texte clair ; il est simplement supprimé."
+eula.3 : "En utilisant cet outil, vous acceptez l'entière responsabilité de vos action, et le fait qu'il est fourni “tel quel” sans aucune garantie."
+
+file.selection.title : "Sélection de fichier(s)"
+file.selection.1 : "Déposez vos fichiers Excel ici ou cliquez sur les boutons."
