Nearly finished the Excel Password Remover revamp, Only the download is missing Update commons.yml, excel-password-remover.yml, and 14 more files...

--- a/data/strings/en/commons.yml
+++ b/data/strings/en/commons.yml
@@ -52,6 +52,9 @@ source.code: "Source code"
 
 download.single: "Download"
 download.multiple: "Downloads"
+download.action.all: "Download All"
+
+clear.all.files: "Clear all file(s)"
 
 github: "GitHub Repository"
 gitea: "Self-hosted Gitea Repository"
